--- a/index.html
+++ b/index.html
@@ -5,15 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIRST ASSIGNMENT</title>
+    <title>FOODIES</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<html>
 
 <body>
-
+    <section>
+        <div class="half-width">
+            <h1>SKIP The Diet,</h1>
+            <h1>Just <span class="header-color">Eat Healthy</span></h1>
+            <h1>With Food Network</h1>
+            <p>food network always provide heathy food,which is special for every cliet .not like jok its real so every
+                one
+                should have one time its food</p>
+            <a class="link-button" href="https://abunaeem130.github.io/devoloper-portfolio1/">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="Group 8425.png" alt="">
+        </div>
+    </section>
+    <section class="top-banner">
+        <div class="half-width">
+            <img src="food-network-main/images/female/6667872_preview-removebg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>we are always try to surv fresh and helthy food so that any cliet are harmeded by our food .as we ensure
+                about healthy food you can come undoubtly.</p>
+            <a class="link-button" href="https://abunaeem130.github.io/devoloper-portfolio1/">Contact Me</a>
+        </div>
+    </section>
+    <div id="heading-style">
+        <h2>my recipies</h2>
+        <p> hdyd jud ksiue diusu judk jdus jdue jd lsiuur djhu jxdud jxud djud jdujd skxid jcxud jxud </p>
+    </div>
+    <section class="food-menu">
+        <div class="food-item">
+            <div class="food-image">
+                <img src="food-network-main/images/food/Project Cover.png" alt="">
+            </div>
+            <h1>recipe title</h1>
+            <p>hfdj hjdgd jdueuebd jdudynh juenc kdiseii fuyyrd judnsguigdysg hsyydgwy lkiyu hydg hygsn jhsyd hybsh sh
+                jdhysjh hywh jsuy hyksa bvgt mjzs qoeu </p>
+        </div>
+        <div class="food-item">
+            <div class="food-image">
+                <img src="food-network-main/images/food/Project Cover.jpg" alt="">
+            </div>
+            <h1> recipe title</h1>
+            <p>gsgs hsyyw jhsu7w jru woyer nnch kzkuf hdudbsd huefg hdsu hdius hfhkdkd dhyhdd hdjd jddbkd jdhdbk hdhgd
+                hjkdh hdynd</p>
+        </div>
+        <div class="food-item">
+            <div class="food-image">
+                <img src="food-network-main/images/food/Project Cover5.png" alt="">
+            </div>
+            <h1>recipe title</h1>
+            <p>fgufisdduuibdsidudssu huugsdbdiud dhudis sjkjsndhc hydbhcx hudhdn dhudue jhiwu hdssyksgdyuds uiiiwuye
+                bsys hgsytwbvu hsysgw</p>
+        </div>
+    </section>
 </body>
 
 </html>
